infra/kubernetes/overlays/dev/web-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasel-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: IfNotPresent
